--- a/Autores.html
+++ b/Autores.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="Css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Css/font-awesome.css">
-	<title>Información General</title>
+	<title>Autores</title>
 </head>
 <body>
 	<div class="header">
@@ -29,70 +29,64 @@
 			</div>
 		</div>
 	</div>
-	<!--Esta es la sección para el Inicio-->
+	
+	<!--Esta es la sección para los autores-->
 	<div class="container row col-lg-12">
-		<div class="col-lg-12 row subcontainer">
-			<div class="col-lg-12  row">
+		<div class="col-lg-12 row">
+			<div class="col-lg-12 subcontainer row">
 				<div class="col-lg-12">
 					<div class="Encabezado col-lg-12 ">
-						<h2>Información General OVI</h2>
+						<h2>Autores</h2>
 					</div>
-					<div class="col-lg-12">
+				</div>
+				<div class="col-lg-8 row ContenedorDatos">
+					<div class="col-lg-3 ContenedorFoto">
+						<img src="Img/FotoHaroldRomero.jpg"> 						
+					</div>
+					<div class="col-lg-9 DatosPersona">
 						<p>
-							El OVI trabajado se basa en la utilziación de GIT, GITHUB, HTML 5 y CSS3, en el cual se explica los conceptos sobre estas herramientas.
+							<b>Nombre: </b> Harold Steven Romero
+						</p>
+						<p>
+							<b>Codigo: </b> 1007152988
+						</p>
+						<p>
+							<b>Programa: </b> Ing. de Sistemas
+						</p>
+						<p>
+							<b>Correo Electronico: </b> harold090473@gmail.com
+						</p>
+						<p>
+							<b>Usuario Skype: </b> 3115038927
 						</p>
 					</div>
 				</div>
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Objetivos Ovi</h2>
+				<div class="col-lg-8 row ContenedorDatos">
+					<div class="col-lg-3 ContenedorFoto">
+						<img src="Img/FotoAlexanderTovar.jpg"> 						
 					</div>
-					<div class="col-lg-12">
+					<div class="col-lg-9 DatosPersona">
 						<p>
-							1. Crear un maquetado inicial, con lo conceptos básicos de HTML 5, CSS 3 y otros conceptos adicionales, que ayudaran en el desarrollo de la página web.
+							<b>Nombre: </b> Alexander Tovar
 						</p>
 						<p>
-							2. Aprender a utilizar y manejar la estructura básica de HTML, para crear un esquema de una página web, también aprender a utilizar bibliotecas externas como lo es Bootstrap y adaptarlo a nuestro HTML.
+							<b>Codigo: </b> 0000000
 						</p>
 						<p>
-							3. Presentar los conceptos básicos de  GIT, GITHUB, HTML 5 y CSS 3.
+							<b>Programa: </b> xxxxxxxxxxx
 						</p>
 						<p>
-							4. Implementar efectos a las páginas web por medio del CSS, utilizado efectos hover, active, before, after, etc.
+							<b>Correo Electronico: </b> xxxxxxxxxxxxx
 						</p>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Objetivos Curso</h2>
-					</div>
-					<div class="col-lg-12">
 						<p>
-							5. Introducción, profundización e información complementaria sobre el uso de GIT y GITHUB para gestionar proyectos colaborativos de diseño web, HTML5 y CSS3 para creación de contenidos en formato web (Paginas y Sitios Web) 
+							<b>Usuario Skype: </b> xxxxxxxxxxxxx
 						</p>
 					</div>
-				</div>
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Tematica del Curso</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>
-							La tematica que se utilizo para el desarrollo de esta actividad fue Diseños de Sitios Web (301122). 
-						</p>
-					</div>
-				</div>				
-				<div class="col-lg-6">
-					<div class="Encabezado col-lg-12 ">
-						<h2>Información Adicional</h2>
-					</div>
-					<div class="col-lg-12">
-						<p>Esta es la informacion adicional ingresada por el grupo</p>
-					</div>
-				</div>
+				</div>		
 			</div>
 		</div>
-	</div>	
+	</div>
+
 	
 	<footer class="page-footer font-small mdb-color pt-4">
 		<a href="#" id="toTop" style="display: inline;">
@@ -119,21 +113,9 @@
 	        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
 	          <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6>
 	           <ul class="social-network social-circle">
-                    <li>
-                    	<a href="https://www.facebook.com/haroldsteven.romero"  targer="_blank" class="icoFacebook" title="Facebook">
-                    		<i class="fa fa-facebook"></i>
-                    	</a>
-                	</li>
-                    <li>
-                    	<a href="https://www.linkedin.com/in/harold-steven-romero-mendiga%C3%B1o-a35b2a15b/" targer="_blank" class="icoLinkedin" title="Linkedin">
-                    		<i class="fa fa-linkedin"></i>
-                    	</a>
-                    </li>
-                    <li>
-                    	<a href="https://www.instagram.com/haroldsromero/" targer="_blank" class="icoInstagram" title="Instagram">
-                    		<i class="fa fa-instagram"></i>
-                    	</a>
-                    </li>
+                    <li><a href="https://www.facebook.com/haroldsteven.romero"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/harold-steven-romero-mendiga%C3%B1o-a35b2a15b/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/haroldsromero/" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
              	</ul>
 	        </div>
 	      </div>
