--- a/Lecturas.html
+++ b/Lecturas.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGit.png"> 						
+						<img src="Img/ColorGitHub.png"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
@@ -101,12 +101,12 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGit.png"> 						
+						<img src="Img/ColorGitHub.png"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
 							<p>
-								Texto de las Git PAGES
+								GitHub Pages es un servicio de alojamiento de sitios estáticos diseñado para alojar sus páginas personales, de organización o de proyecto directamente desde un repositorio de GitHub.
 							</p>
 						</div>
 						<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModalGitPages">
@@ -295,8 +295,21 @@
       </div>
       <div class="modal-body">
         <p>
-        	Esto es el texto de GIT Pages
+        	GitHub Pages es un servicio de alojamiento de sitios estáticos diseñado para alojar sus páginas personales, de organización o de proyecto directamente desde un repositorio de GitHub.
+			Puede crear y publicar sitios de GitHub Pages en línea utilizando el Selector de temas de Jekyll . O si prefiere trabajar localmente, puede usar GitHub Desktop o la línea de comandos .
+			GitHub Pages es un servicio de alojamiento de sitios estáticos y no es compatible con el código del servidor, como PHP, Ruby o Python.
+			Para obtener más información sobre los diferentes tipos de sitios de GitHub Pages, consulte "Páginas de usuarios, organizaciones y proyectos ".
         </p>
+        <p>
+        	Los sitios de GitHub Pages están sujetos a los siguientes límites de uso
+        	<ul>
+        		<li>Los repositorios de origen de GitHub Pages tienen un límite recomendado de 1 GB .</li>
+        		<li>Los sitios de GitHub Pages publicados no pueden tener más de 1 GB.</li>
+        		<li>Los sitios de GitHub Pages tienen un límite de ancho de banda flexible de 100 GB por mes.</li>
+        		<li>Los sitios de GitHub Pages tienen un límite suave de 10 compilaciones por hora.</li>
+        	</ul>
+        </p>
+        <img src="Img/GitHubPages.png" class="img-fluid" alt="Responsive image">
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
