--- a/Lecturas.html
+++ b/Lecturas.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<script src="Js/jquery.js" type="text/javascript"></script>
+	<script src="Js/FuncionesOVI.js" type="text/javascript"></script>
 	<script src="Js/bootstrap.js" type="text/javascript"></script>
 	<script src="Js/bootstrap.min.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="Css/style.css">
@@ -41,7 +42,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGit.png"> 						
+						<img src="Img/ColorGit.png" data-toggle="modal" data-target="#ModalGit"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
@@ -56,7 +57,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGitHub.png"> 						
+						<img src="Img/ColorGitHub.png" data-toggle="modal" data-target="#ModalGitHub"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
@@ -71,7 +72,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGit.png"> 						
+						<img src="Img/HTMLogo.png" data-toggle="modal" data-target="#ModalHTML"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
@@ -86,7 +87,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGit.png"> 						
+						<img src="Img/ColorCSS3Logo.png" data-toggle="modal" data-target="#ModalCSS"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
@@ -101,7 +102,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGitHub.png"> 						
+						<img src="Img/ColorGitHub.png" data-toggle="modal" data-target="#ModalGitPages"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
