--- a/Autores.html
+++ b/Autores.html
@@ -70,16 +70,16 @@
 							<b>Nombre: </b> Alexander Tovar
 						</p>
 						<p>
-							<b>Codigo: </b> 0000000
+							<b>Codigo: </b> 1.010.237.739
 						</p>
 						<p>
-							<b>Programa: </b> xxxxxxxxxxx
+							<b>Programa: </b> Ing. de Sistemas
 						</p>
 						<p>
-							<b>Correo Electronico: </b> xxxxxxxxxxxxx
+							<b>Correo Electronico: </b> esneider@gmail.com
 						</p>
 						<p>
-							<b>Usuario Skype: </b> xxxxxxxxxxxxx
+							<b>Usuario Skype: </b> sneider.Tovar
 						</p>
 					</div>
 				</div>		
