--- a/Autores.html
+++ b/Autores.html
@@ -16,7 +16,7 @@
 	<div class="header">
 		<div class="col-lg-12 ContenHeader">
 			<div class="col-lg-4 ContentLogo">
-				<img src="Img/ESCUDO_DE_LA_UNAD.jpg" > 
+				<img src="Img/ESCUDO_DE_LA_UNAD.png" > 
 			</div>
 			<div class="col-lg-8 Menu">
 				<ul id="menu">
@@ -93,33 +93,25 @@
 			<span id="toTopHover" style="opacity: 0;"></span>
 			To Top
 		</a>
-	    <div class="container text-center text-md-left">
+	       
+          <div class="container text-center text-md-left">
 	      <div class="row text-center text-md-left mt-3 pb-3">
-	        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 productos">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-	          <p><a href="https://git-scm.com/" target="_blank">GIT</a></p>
-	          <p><a href="https://github.com/" target="_blank">GITHUB</a></p>
-	          <p><a href="https://developer.mozilla.org/es/docs/HTML/HTML5" target="_blank">HTML 5</a></p>
-	          <p><a href="https://developer.mozilla.org/es/docs/Web/CSS/CSS3" target="_blank">CSS 3</a></p>
-	        </div>
-	        <hr class="w-100 clearfix d-md-none">
-	        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 contacto">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-	          <p>Bogota / Colombia</p>
-	          <p>harold090473@gmail.com</p>
-	          <p>3115038927</p>
-	        </div>
-	        <hr class="w-100 clearfix d-md-none">
-	        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6>
-	           <ul class="social-network social-circle">
-                    <li><a href="https://www.facebook.com/haroldsteven.romero"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/harold-steven-romero-mendiga%C3%B1o-a35b2a15b/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/haroldsromero/" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-             	</ul>
-	        </div>
+	          <hr class="w-100 clearfix d-md-none">
+	         <div class="col-lg-12">
+					<div class="Encabezado col-lg-12 ">
+						<h2>¿QUIÉNES SOMOS?</h2>
+					</div>
+				</div>
+	          <p>Somos grupo de estudiantes de&nbsp;Ingeniería de Sistemas de la Universidad Nacional Abierta y a Distancia (UNAD), los invitamos a conocer mas sobre la Universidad y hacer parte de esta gran comunidad.</p>
 	      </div>
-	      <hr>
+
+	      <div class="container">
+	      <center><br><h5>Donde estamos ubicados</h5></br></center>
+          <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31815.15533680047!2d-74.09965998232447!3d4.6129125355254885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f98e1003987bd%3A0xc1c38a35fe03bf87!2sUniversidad+Nacional+Abierta+y+a+Distancia+-+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses-419!2sco!4v1540158388515" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></center>
+
+         </div>
+
+	      <hr
 	      <div class="row d-flex align-items-center redes">
 	        <div class="col-md-7 col-lg-12">
 	          	<p class="text-center text-md-left">© 2018 Copyright:
