--- a/Lecturas.html
+++ b/Lecturas.html
@@ -17,7 +17,7 @@
 	<div class="header">
 		<div class="col-lg-12 ContenHeader">
 			<div class="col-lg-4 ContentLogo">
-				<img src="Img/ESCUDO_DE_LA_UNAD.jpg" > 
+				<img src="Img/ESCUDO_DE_LA_UNAD.png" > 
 			</div>
 			<div class="col-lg-8 Menu">
 				<ul id="menu">
