--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 	<link rel="stylesheet" type="text/css" href="Css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="Css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Css/font-awesome.css">
-	<title>Información General</title>
+	<title>Inicio</title>
+	<link rel="icon" href="img/logo.ico">
 </head>
 <body>
+
 	<div class="header">
 		<div class="col-lg-12 ContenHeader">
 			<div class="col-lg-4 ContentLogo">
-				<img src="Img/ESCUDO_DE_LA_UNAD.jpg" > 
+				<img src="Img/ESCUDO_DE_LA_UNAD.png" > 
 			</div>
 			<div class="col-lg-8 Menu">
 				<ul id="menu">
@@ -29,6 +31,12 @@
 			</div>
 		</div>
 	</div>
+
+ 	<div class="banner img-1 textbanner">      
+    </div>	
+
+    
+
 	<!--Esta es la sección para el Inicio-->
 	<div class="container row col-lg-12">
 		<div class="col-lg-12 row subcontainer">
@@ -101,13 +109,6 @@
 		</a>
 	    <div class="container text-center text-md-left">
 	      <div class="row text-center text-md-left mt-3 pb-3">
-	        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 productos">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-	          <p><a href="https://git-scm.com/" target="_blank">GIT</a></p>
-	          <p><a href="https://github.com/" target="_blank">GITHUB</a></p>
-	          <p><a href="https://developer.mozilla.org/es/docs/HTML/HTML5" target="_blank">HTML 5</a></p>
-	          <p><a href="https://developer.mozilla.org/es/docs/Web/CSS/CSS3" target="_blank">CSS 3</a></p>
-	        </div>
 	        <hr class="w-100 clearfix d-md-none">
 	        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 contacto">
 	          <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
