Sub-Menu y Lecturas
Los cambios realizados son:

1.Ajunste del menú de inicio, implementación del submenú.
2. Creación de las paginas por separado para cada una de las lecturas.
3. Cambio en las imagenes de las lecturas.

--- a/Actividades.html
+++ b/Actividades.html
@@ -23,17 +23,9 @@
 			<div class="col-lg-8 Menu">
 				<ul id="menu">
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="">Lecturas</a>
-						<ul>
-							<li><a href="GIT.html">GIT</a></li>
-							<li><a href="GITHUB.html">GITHUB</a></li>
-                            <li><a href="GITPages.html">GitHub Pages</a></li>
-						    <li><a href="HTML5.html">HTML5</a></li>
-                            <li><a href="CSS3.html">CSS3</a></li>		
-					    </ul>
-					</li>
-					<li><a href="Multimedia.html">Multimedia</a></li>
-					<li><a href="Actividades.html">Actividades</a></li>
+					<li><a href="Lecturas.html">Lecturas</a></li>
+					<li><a href="index.html">Multimedia</a></li>
+					<li><a href="index.html">Actividades</a></li>
 					<li><a href="Autores.html">Autores</a></li>
 				</ul>
 			</div>
@@ -59,7 +51,8 @@
 						</p>
 					</div>
 				</div>
-				
+				<div class="banner img-1 textbanner">      
+                </div>	
 				<div class="col-lg-6">
 					<div class="Encabezado col-lg-12 ">
 						<h2>Objetivos Ovi</h2>
