--- a/Autores.html
+++ b/Autores.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="Css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Css/font-awesome.css">
 	<title>Autores</title>
+	<link rel="icon" href="img/logo.ico">
 </head>
 <body>
 	<div class="header">
@@ -21,7 +22,15 @@
 			<div class="col-lg-8 Menu">
 				<ul id="menu">
 					<li><a href="index.html">Inicio</a></li>
-					<li><a href="Lecturas.html">Lecturas</a></li>
+					<li><a href="">Lecturas</a>
+						<ul>
+							<li><a href="GIT.html">GIT</a></li>
+							<li><a href="GITHUB.html">GITHUB</a></li>
+                            <li><a href="GITPages.html">GitHub Pages</a></li>
+						    <li><a href="HTML5.html">HTML5</a></li>
+                            <li><a href="CSS3.html">CSS3</a></li>		
+					    </ul>
+					</li>
 					<li><a href="index.html">Multimedia</a></li>
 					<li><a href="index.html">Actividades</a></li>
 					<li><a href="Autores.html">Autores</a></li>
