--- a/Lecturas.html
+++ b/Lecturas.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="Css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="Css/font-awesome.css">
 	<title>Lecturas</title>
+	<link rel="icon" href="img/logo.ico">
 </head>
 <body>
 	<div class="header">
