--- a/CSS3.html
+++ b/CSS3.html
@@ -51,10 +51,13 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorCSS3Logo.png" data-toggle="modal" data-target="#ModalCSS"> 						
+						<img src="Img/ColorCSS3Logo.png" data-toggle="modal" data-target="#ModalCSS" alt="Responsive image"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
+							<p>
+								CSS3 es la última evolución del lenguaje de las Hojas de Estilo en Cascada (Cascading Style Sheets), y pretende ampliar la versión CSS2.1. Trae consigo muchas novedades altamente esperadas , como las esquinas redondeadas, sombras, gradientes , transiciones o animaciones, y nuevos layouts como multi-columnas, cajas flexibles o maquetas de diseño en cuadrícula (grid layouts).
+							</p>
 							<p>
                             	El Nivel 2 de CSS necesitó 9 años, desde Agosto de 2002 hasta Junio de 2011, para alcanzar el estado de Recomendación. Esto fué debido al hecho de que algunas características secundarias fueron retiradas de las especificaciones globales, con el fin de acelerar la normalización de las características no problemáticas, el Grupo de Trabajo CSS de la W3C, en una decisión referida como la doctrina Beijing  dividió CSS en componentes más pequeños llamados módulos cada uno de estos módulos es ahora una parte independiente del lenguaje y se dirije a la estandarización a su propio ritmo mientras algunos módulos son ya recomendados de la W3C, otros todavía son borradores iniciales tambíen se añaden nuevos módulos cuando se identifican nuevas necesidades.
                             </p>
