--- a/GIT.html
+++ b/GIT.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGit.png" data-toggle="modal" data-target="#ModalGit"> 						
+						<img src="Img/ColorGit.png" data-toggle="modal" data-target="#ModalGit" alt="Responsive image"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
