--- a/GITPages.html
+++ b/GITPages.html
@@ -51,7 +51,7 @@
 				</div>
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/ColorGitHub.png" data-toggle="modal" data-target="#ModalGitPages"> 						
+						<img src="Img/ColorGitHub.png" data-toggle="modal" data-target="#ModalGitPages" alt="Responsive image"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
