--- a/HTML5.html
+++ b/HTML5.html
@@ -53,7 +53,7 @@
 				
 				<div class="col-lg-12 row">
 					<div class="col-lg-3">
-						<img src="Img/HTMLogo.png" data-toggle="modal" data-target="#ModalHTML"> 						
+						<img src="Img/HTMLogo.png" data-toggle="modal" data-target="#ModalHTML" alt="Responsive image"> 						
 					</div>
 					<div class="col-lg-9">
 						<div class="col-lg-12">
