--- a/GITHUB.html
+++ b/GITHUB.html
@@ -50,7 +50,7 @@
 					</div>
 				</div>
 				<div class="col-lg-12 row">
-					<div class="col-lg-3">
+					<div class="col-lg-3 contenedorIMG">
 						<img src="Img/ColorGitHub.png" data-toggle="modal" data-target="#ModalGitHub" alt="Responsive image"> 						
 					</div>
 					<div class="col-lg-9">
