--- a/HTML5.html
+++ b/HTML5.html
@@ -52,7 +52,7 @@
 				
 				
 				<div class="col-lg-12 row">
-					<div class="col-lg-3">
+					<div class="col-lg-3 contenedorIMG">
 						<img src="Img/HTMLogo.png" data-toggle="modal" data-target="#ModalHTML" alt="Responsive image"> 						
 					</div>
 					<div class="col-lg-9">
