Creación del footer
Cambios realizados:
Se creo el footer y se agregaron las redes solciales de la UNAD

--- a/Autores.html
+++ b/Autores.html
@@ -96,41 +96,48 @@
 		</div>
 	</div>
 
-	
-	<footer class="page-footer font-small mdb-color pt-4">
+	<div class="container row col-lg-12">
+		<div class="col-lg-12 row">
+			<div class="col-lg-12 subcontainer row">
+				<div class="col-lg-12">
+					<div class="Encabezado col-lg-12 ">
+						<h2>¿QUIÉNES SOMOS?</h2>
+					</div>
+					<p>Somos grupo de estudiantes de&nbsp;Ingeniería de Sistemas de la Universidad Nacional Abierta y a Distancia (UNAD), los invitamos a conocer mas sobre la Universidad y hacer parte de esta gran comunidad.</p>
+
+					<div class="container">
+	                <center><br><h5>Donde estamos ubicados</h5></br></center>
+                    <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31815.15533680047!2d-74.09965998232447!3d4.6129125355254885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f98e1003987bd%3A0xc1c38a35fe03bf87!2sUniversidad+Nacional+Abierta+y+a+Distancia+-+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses-419!2sco!4v1540158388515" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></center>
+                    </div>
+				</div>	
+			</div>
+		</div>
+	</div>
+
+  	<footer class="footer font-small mdb-color pt-4">
 		<a href="#" id="toTop" style="display: inline;">
 			<span id="toTopHover" style="opacity: 0;"></span>
 			To Top
 		</a>
-	       
-          <div class="container text-center text-md-left">
-	      <div class="row text-center text-md-left mt-3 pb-3">
-	          <hr class="w-100 clearfix d-md-none">
-	         <div class="col-lg-12">
-					<div class="Encabezado col-lg-12 ">
-						<h2>¿QUIÉNES SOMOS?</h2>
-					</div>
-				</div>
-	          <p>Somos grupo de estudiantes de&nbsp;Ingeniería de Sistemas de la Universidad Nacional Abierta y a Distancia (UNAD), los invitamos a conocer mas sobre la Universidad y hacer parte de esta gran comunidad.</p>
-	      </div>
+                <img src="Img/LogoUNAD.png" align="left">
+                <div class="footerRedes">
+	            <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6> 
+	            <ul class="social-network social-circle">
+                    <li><a href="https://www.facebook.com/UniversidadUNAD/"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/school/universidad-nacional-abierta-y-a-distancia/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/universidadunad/?hl=es-la" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+             	</ul>
+	            </div>
 
-	      <div class="container">
-	      <center><br><h5>Donde estamos ubicados</h5></br></center>
-          <center><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31815.15533680047!2d-74.09965998232447!3d4.6129125355254885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f98e1003987bd%3A0xc1c38a35fe03bf87!2sUniversidad+Nacional+Abierta+y+a+Distancia+-+Sede+Jos%C3%A9+Celestino+Mutis!5e0!3m2!1ses-419!2sco!4v1540158388515" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></center>
-
-         </div>
-
-	      <hr
-	      <div class="row d-flex align-items-center redes">
-	        <div class="col-md-7 col-lg-12">
-	          	<p class="text-center text-md-left">© 2018 Copyright:
-		            <a href="https://www.unad.edu.co/" target="_blank">
-		              <strong> UNAD</strong>
-		            </a>
-	         	 </p>
-	        </div>
-	      </div>
-	    </div>
+		        <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23</p>
+                <p>Línea nacional gratuita desde Colombia: 018000115223</p>
+                <p>Atención al usuario: atencionalusuario@unad.edu.co</p>
+                <p>Institución de Educación Superior sujeta a inspección y vigilancia por el Ministerio de Educación Nacional</p>
+                <p class="text-center text-md-left">© 2018 Copyright:
+		        <a href="https://www.unad.edu.co/" target="_blank">
+		        <strong> UNAD</strong>
+		        </a>
+	         	</p>	    
   	</footer>
 </body>
 </html>
