--- a/CSS3.html
+++ b/CSS3.html
@@ -73,50 +73,32 @@
 		</div>
 	</div>
 
-	
-	<footer class="page-footer font-small mdb-color pt-4">
+	<footer class="footer font-small mdb-color pt-4">
 		<a href="#" id="toTop" style="display: inline;">
 			<span id="toTopHover" style="opacity: 0;"></span>
 			To Top
 		</a>
-	    <div class="container text-center text-md-left">
-	      <div class="row text-center text-md-left mt-3 pb-3">
-	        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 productos">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-	          <p><a href="https://git-scm.com/" target="_blank">GIT</a></p>
-	          <p><a href="https://github.com/" target="_blank">GITHUB</a></p>
-	          <p><a href="https://developer.mozilla.org/es/docs/HTML/HTML5" target="_blank">HTML 5</a></p>
-	          <p><a href="https://developer.mozilla.org/es/docs/Web/CSS/CSS3" target="_blank">CSS 3</a></p>
-	        </div>
-	        <hr class="w-100 clearfix d-md-none">
-	        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 contacto">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Contacto</h6>
-	          <p>Bogota / Colombia</p>
-	          <p>harold090473@gmail.com</p>
-	          <p>3115038927</p>
-	        </div>
-	        <hr class="w-100 clearfix d-md-none">
-	        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-	          <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6>
-	           <ul class="social-network social-circle">
-                    <li><a href="https://www.facebook.com/haroldsteven.romero"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/harold-steven-romero-mendiga%C3%B1o-a35b2a15b/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/haroldsromero/" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+                <img src="Img/LogoUNAD.png" align="left">
+                <div class="footerRedes">
+	            <h6 class="text-uppercase mb-4 font-weight-bold">Redes</h6> 
+	            <ul class="social-network social-circle">
+                    <li><a href="https://www.facebook.com/UniversidadUNAD/"  targer="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="https://www.linkedin.com/school/universidad-nacional-abierta-y-a-distancia/" targer="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/universidadunad/?hl=es-la" targer="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
              	</ul>
-	        </div>
-	      </div>
-	      <hr>
-	      <div class="row d-flex align-items-center redes">
-	        <div class="col-md-7 col-lg-12">
-	          	<p class="text-center text-md-left">© 2018 Copyright:
-		            <a href="https://www.unad.edu.co/" target="_blank">
-		              <strong> UNAD</strong>
-		            </a>
-	         	 </p>
-	        </div>
-	      </div>
-	    </div>
+	            </div>
+
+		        <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23</p>
+                <p>Línea nacional gratuita desde Colombia: 018000115223</p>
+                <p>Atención al usuario: atencionalusuario@unad.edu.co</p>
+                <p>Institución de Educación Superior sujeta a inspección y vigilancia por el Ministerio de Educación Nacional</p>
+                <p class="text-center text-md-left">© 2018 Copyright:
+		        <a href="https://www.unad.edu.co/" target="_blank">
+		        <strong> UNAD</strong>
+		        </a>
+	         	</p>	    
   	</footer>
+
 		
 </body>
 
