Cargue de audio

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </div>
                         <div class="col-lg-12">
                             <p>
-                                Esta es la informacion adicional ingresada por el grupo
+                                En el desarrollo de esta actividad se conoce mas afondo el funcionamiento de GitHub, GitHubPages, Css, HTML y otras implementaciones adicionales que se hicieron en esta pagina, esta cuenta con secciones de Slider(Carrucel) para la visualizzción de los videos.
                             </p>
                         </div>
                     </div>
