--- a/Multimedia.html
+++ b/Multimedia.html
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div class="col-lg-12">
-                        <audio alt="Third slide" autoplay="" class="d-block w-100" controls="" loop="" src="Audios/Prueba.mp3">
+                        <audio alt="Third slide" autoplay="" class="d-block w-100" controls="" loop="" src="Audios/GrabacionAudioTemas.m4a">
                         </audio>
                     </div>
                 </div>
